# PrefixTrie

./: .gitignore  404.html  MANIFEST.in  README.md  debug_substring.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_benchmark.py  run_substring_benchmark.py  sitemap.xml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml
docs/: index.md  reference.md
examples/: index.html
getting-started/: index.html
reference/: index.html
search/: search_index.json
src/prefixtrie/: __init__.py  _impl.pyx  simd_compare.h
test/: test.py  test_benchmark.py  test_pickle.py  test_readme_examples.py
