[project]
name = "prefixtrie"
dynamic = ["version"]
description = "A cython implementation of a read-only prefix trie data structure."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Austin Varela", email = "austinv11@gmail.com"},
]
maintainers = [
    {name = "Austin Varela", email = "austinv11@gmail.com"},
]
keywords = ["trie", "prefix-trie", "fuzzy-matching", "string-matching", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/austinv11/PrefixTrie"
Repository = "https://github.com/austinv11/PrefixTrie"
Documentation = "https://github.com/austinv11/PrefixTrie#readme"
"Bug Tracker" = "https://github.com/austinv11/PrefixTrie/issues"
Changelog = "https://github.com/austinv11/PrefixTrie/releases"

[build-system]
requires = ["setuptools>=80", "wheel", "cython>=3.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
ext-modules = [{name = "prefixtrie._impl", sources = ["src/prefixtrie/_impl.pyx"], language = "c++", extra-compile-args = ["-O3", "-std=c++11"], extra-link-args = ["-O3"]}]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "cython",
]
test = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["test"]
python_files = ["test*.py", "*test.py"]
addopts = ["-ra", "--strict-config", "--strict-markers", "--maxfail=1"]

[tool.setuptools_scm]
write_to = "src/prefixtrie/_version.py"
fallback_version = "0.1.0"
